clrhost/src/altv-c-api/checkpoint.h

#pragma once

#ifdef __clang__
#pragma clang diagnostic push
#pragma clang diagnostic ignored "-Wempty-body"
#endif

#include <altv-cpp-api/API.h>

#ifdef __clang__
#pragma clang diagnostic pop
#endif

#ifdef __cplusplus
extern "C"
{
#endif
// Entity
EXPORT uint16_t Checkpoint_GetID(alt::ICheckpoint* checkpoint);
EXPORT alt::Position Checkpoint_GetPosition(alt::ICheckpoint* checkpoint);
EXPORT void Checkpoint_SetPosition(alt::ICheckpoint* checkpoint, alt::Position pos);
EXPORT alt::Rotation Checkpoint_GetRotation(alt::ICheckpoint* checkpoint);
EXPORT void Checkpoint_SetRotation(alt::ICheckpoint* checkpoint, alt::Rotation rot);
EXPORT uint16_t Checkpoint_GetDimension(alt::ICheckpoint* checkpoint);
EXPORT void Checkpoint_SetDimension(alt::ICheckpoint* checkpoint, uint16_t dimension);
EXPORT void Checkpoint_GetMetaData(alt::ICheckpoint* checkpoint, const char* key, alt::MValue &val);
EXPORT void Checkpoint_SetMetaData(alt::ICheckpoint* checkpoint, const char* key, alt::MValue* val);
EXPORT void Checkpoint_GetSyncedMetaData(alt::ICheckpoint* checkpoint, const char* key, alt::MValue &val);
EXPORT void Checkpoint_SetSyncedMetaData(alt::ICheckpoint* checkpoint, const char* key, alt::MValue* val);
// Checkpoint
EXPORT bool Checkpoint_IsGlobal(alt::ICheckpoint* checkpoint);
EXPORT uint8_t Checkpoint_GetCheckpointType(alt::ICheckpoint* checkpoint);
EXPORT float Checkpoint_GetHeight(alt::ICheckpoint* checkpoint);
EXPORT float Checkpoint_GetRadius(alt::ICheckpoint* checkpoint);
EXPORT alt::RGBA Checkpoint_GetColor(alt::ICheckpoint* checkpoint);
#ifdef __cplusplus
}
#endif